--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.25.1",
     "use-elapsed-time": "^3.0.4"
   },
   "devDependencies": {
